[gd_scene load_steps=4 format=3 uid="uid://c1tepacjfl6vu"]

[ext_resource type="Script" path="res://Charter/NodeTypeMenu/CharterNodeTypeMenu.gd" id="1_xrobp"]
[ext_resource type="Texture2D" uid="uid://c3n7j28sa0y68" path="res://Icons/ArrowDown.png" id="2_3gt0h"]
[ext_resource type="Texture2D" uid="uid://cqtmjxrsl4siw" path="res://Icons/Trash.png" id="3_h0c4j"]

[node name="CharterNodeTypeMenu" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
script = ExtResource("1_xrobp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MenuHeader" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MenuHeader"]
layout_mode = 2
size_flags_vertical = 3

[node name="DropdownButton" type="Button" parent="VBoxContainer/MenuHeader/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("2_3gt0h")
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MenuHeader/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="NodeTypeNameEdit" type="LineEdit" parent="VBoxContainer/MenuHeader/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "node_type_name"

[node name="DeleteButton" type="Button" parent="VBoxContainer/MenuHeader/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_h0c4j")
expand_icon = true

[node name="MenuBody" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Items" type="VBoxContainer" parent="VBoxContainer/MenuBody"]
layout_mode = 2

[node name="NewButton" type="Button" parent="VBoxContainer/MenuBody/Items"]
layout_mode = 2
text = "New property"

[connection signal="pressed" from="VBoxContainer/MenuHeader/HBoxContainer/DropdownButton" to="." method="_on_dropdown_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuHeader/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuBody/Items/NewButton" to="." method="_on_new_button_pressed"]
